--- a/src/c/CudaMex.vcxproj
+++ b/src/c/CudaMex.vcxproj
@@ -29,6 +29,7 @@
     <ClCompile Include="CudaMex\GaussianFilter.cpp" />
     <ClCompile Include="CudaMex\Histogram.cpp" />
     <ClCompile Include="CudaMex\ImagePow.cpp" />
+    <ClCompile Include="CudaMex\Mask.cpp" />
     <ClCompile Include="CudaMex\MaxFilterNeighborHood.cpp" />
     <ClCompile Include="CudaMex\MaxFilterCircle.cpp" />
     <ClCompile Include="CudaMex\MaxFilterKernal.cpp" />
@@ -39,6 +40,8 @@
     <ClCompile Include="CudaMex\MinFilterNeighborhood.cpp" />
     <ClCompile Include="CudaMex\MinFilterCircle.cpp" />
     <ClCompile Include="CudaMex\MinFilterKernal.cpp" />
+    <ClCompile Include="CudaMex\MorphClosure.cpp" />
+    <ClCompile Include="CudaMex\MorphOpening.cpp" />
     <ClCompile Include="CudaMex\MultiplyImage.cpp" />
     <ClCompile Include="CudaMex\MultiplyImageWith.cpp" />
     <ClCompile Include="CudaMex\NormalizedCovariance.cpp" />
