--- a/src/c/CudaMex.vcxproj
+++ b/src/c/CudaMex.vcxproj
@@ -54,6 +54,7 @@
     <ClCompile Include="CudaMex\ThresholdFilter.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <CudaCompile Include="Common\CudaImageContainer.cu" />
     <CudaCompile Include="Common\CudaUtilities.cu" />
     <CudaCompile Include="Common\Process.cu" />
   </ItemGroup>
@@ -92,6 +93,7 @@
       <FileType>Document</FileType>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</ExcludedFromBuild>
     </ClInclude>
+    <None Include="Common\CudaImageContainer.cuh" />
     <None Include="CudaMex\CudaMex.def" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
