--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ src/c/CudaMex.mexw64
 src/MATLAB/CudaMex.mexw64
 src/MATLAB/cudart32_55.dll
 src/MATLAB/cudart64_55.dll
+src/c/CudaImageProccessing.opensdf
